--- a/public_html/index.html
+++ b/public_html/index.html
@@ -8,6 +8,8 @@
 		<script src="./scripts/defaultMap.js" type="text/javascript"></script>
 
 		<script src="./scripts/Canvas.js" type="text/javascript"></script>
+		<script src="./scripts/Character.js" type="text/javascript"></script>
+		<script src="./scripts/MapGame.js" type="text/javascript"></script>
 
 		<script src="./scripts/main.js" type="text/javascript"></script>
 		<!-- Hoja de estilos -->
