--- a/public_html/index.html
+++ b/public_html/index.html
@@ -5,17 +5,25 @@
 		<!-- Librerias externas -->
         <script src="./libs/jquery.js" type="text/javascript"></script>
 		<!-- Scripts -->
+		
+		<script src="./scripts/GhostCollection.js" type="text/javascript"></script>
+		<script src="./scripts/Ghost.js" type="text/javascript"></script>
+		<script src="./scripts/Position.js" type="text/javascript"></script>
 		<script src="./scripts/defaultMap.js" type="text/javascript"></script>
-
 		<script src="./scripts/Canvas.js" type="text/javascript"></script>
 		<script src="./scripts/Character.js" type="text/javascript"></script>
-		<script src="./scripts/MapGame.js" type="text/javascript"></script>
+		<script src="./scripts/PacmanGame.js" type="text/javascript"></script>
 
 		<script src="./scripts/main.js" type="text/javascript"></script>
 		<!-- Hoja de estilos -->
 		<link rel="stylesheet" type="text/css" href="./styles/styles.css" />
 	</head>
 	<body>
-		<canvas height="608" width="480" id="game"></canvas>
+		<div class="images">
+			<img id="pacman-character-img" src="styles/assets/pacman-sprite.png">
+			<img id="ghost-character-img" src="styles/assets/ghost-sprite.png">
+			<img id="map-img" src="styles/assets/cell-sprite.png">
+		</div>
+		<canvas height="545" width="448" id="game"></canvas>
 	</body>
 </html>
