Refactor in progress

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -5,16 +5,19 @@
 		<!-- Librerias externas -->
         <script src="./libs/jquery.js" type="text/javascript"></script>
 		<!-- Scripts -->
-		
-		<script src="./scripts/GhostCollection.js" type="text/javascript"></script>
-		<script src="./scripts/Ghost.js" type="text/javascript"></script>
-		<script src="./scripts/Position.js" type="text/javascript"></script>
+
+		<!-- Default map -->
+		<script src="./scripts/class/Position.js" type="text/javascript"></script>
 		<script src="./scripts/defaultMap.js" type="text/javascript"></script>
-		<script src="./scripts/Canvas.js" type="text/javascript"></script>
-		<script src="./scripts/Character.js" type="text/javascript"></script>
-		<script src="./scripts/PacmanGame.js" type="text/javascript"></script>
+		
+		<script src="./scripts/class/Canvas.js" type="text/javascript"></script>
+		<script src="./scripts/class/MapGame.js" type="text/javascript"></script>
+		<script src="./scripts/class/Game.js" type="text/javascript"></script>
+		<script src="./scripts/class/Markers.js" type="text/javascript"></script>
+		<script src="./scripts/class/PacmanCharacter.js" type="text/javascript"></script>
 
 		<script src="./scripts/main.js" type="text/javascript"></script>
+		
 		<!-- Hoja de estilos -->
 		<link rel="stylesheet" type="text/css" href="./styles/styles.css" />
 	</head>
