--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,12 +1,16 @@
 <html>
 	<head>
-		<title>The game is this</title>
-		
+		<title>Pacman</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+
+		<link rel="icon" type="image/gif" href="favicon.gif">
 		<!-- Librerias externas -->
         <script src="./libs/jquery.js" type="text/javascript"></script>
 		<!-- Scripts -->
 
 		<!-- Default map -->
+		<script src="./scripts/utils/ScreenAdapter.js" type="text/javascript"></script>
+
 		<script src="./scripts/class/Position.js" type="text/javascript"></script>
 		<script src="./scripts/defaultMap.js" type="text/javascript"></script>
 		
@@ -27,6 +31,20 @@
 			<img id="ghost-character-img" src="styles/assets/ghost-sprite.png">
 			<img id="map-img" src="styles/assets/cell-sprite.png">
 		</div>
-		<canvas height="458" width="364" id="game"></canvas>
+		<!--
+		<canvas height="114" width="91" id="game"></canvas>
+		<canvas height="229" width="182" id="game"></canvas>
+		-->
+		<canvas id="game"></canvas>
+		<div class="controls">
+			<div class="directions">
+				<div class="action left" data-keycode="37">></div>
+				<div class="action up" data-keycode="38">></div>
+				<div class="action right" data-keycode="39">></div>
+				<div class="action down" data-keycode="40">></div>
+			</div>
+			<div class="action pause" data-keycode="32"></div>
+		</div>
+
 	</body>
 </html>
